# legal-ai-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test-output.xml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_fix_embedding_dim.py  003_add_source_id.py
data/: manifest.json  nwlr_manifest.json
data/quality/: benchmark.jsonl  benchmark.template.jsonl
evaluation/benchmark/: builder.py
scripts/: backfill_source_id.py  crawl.py  embed.py  evaluate.py  load.py  nwlr_crawl.py  parse.py
src/: config.py  db.py
src/api/: app.py  schemas.py
src/api/routers/: generate.py  search.py
src/generation/: models.py  pipeline.py  templates.py  verification.py
src/ingestion/: orchestrator.py
src/ingestion/citations/: extractor.py  graph_builder.py
src/ingestion/embedding/: chunker.py  embedder.py
src/ingestion/loaders/: db_loader.py
src/ingestion/parsing/: metadata_extractor.py  nwlr_parser.py  text_cleaner.py
src/ingestion/segmentation/: llm_segmenter.py  models.py  nlp_rules.py  structural.py
src/ingestion/sources/: courtofappeal.py  laws_africa.py  nigerialii.py  nwlronline.py  pdf_extractor.py
src/retrieval/: cache.py  engine.py  fusion.py  models.py  query_expander.py  query_parser.py  reranker.py  searcher.py  statutes.py
tests/unit/api/: test_generate_api.py  test_search_api.py
tests/unit/generation/: test_models.py  test_pipeline.py  test_templates.py  test_verification.py
tests/unit/ingestion/: test_citation_extractor.py  test_crawler.py  test_nwlr_cli.py  test_nwlronline.py  test_parser.py  test_segmenter.py  test_week4.py
tests/unit/retrieval/: test_cache.py  test_engine.py  test_fusion.py  test_query_expander.py  test_query_parser.py  test_reranker.py  test_searcher.py
