[project]
name = "legal-ai-assistant"
version = "0.1.0"
description = "AI-powered Nigerian legal motion drafting assistant"
requires-python = ">=3.12"
dependencies = [
    # API layer
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    # Database
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    # Cache / task queue
    "redis[hiredis]>=5.0.0",
    "celery[redis]>=5.3.0",
    # HTTP / scraping
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "playwright>=1.43.0",
    "trafilatura>=1.9.0",
    # AI / embeddings
    "anthropic>=0.25.0",
    "voyageai>=0.2.0",
    # PDF extraction (for CoA and other PDF-based sources)
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",
    # Document export
    "python-docx>=1.1.0",
    "weasyprint>=62.0",
    # Utilities
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "pyright>=1.1.360",
    "pre-commit>=3.7.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["api", "config", "db", "ingestion", "generation", "retrieval"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["src", "tests", "scripts"]
venvPath = "."
venv = ".venv"
extraPaths = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "psycopg2-binary>=2.9.11",
]
